# bip388

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
src/: lib.rs  time.rs
src/cleartext/: decode.rs  mod.rs
src/cleartext/specs/: cleartext.toml  test_vectors.toml
