[package]
name = "bip388"
version = "0.1.1"
authors = ["Salvatore Ingala <salvatoshi@protonmail.com>"]
edition = "2021"
description = "A no_std, allocator-backed Rust crate for parsing, serializing and clear-signing BIP-388 wallet policies."
license = "Apache-2.0"
repository = "https://github.com/bigspider/bip388"
readme = "README.md"
keywords = ["bitcoin", "bip388", "descriptor", "wallet-policy", "no_std"]
categories = ["cryptography::cryptocurrencies", "no-std"]

[features]
default = []
cleartext-decode = []

[dependencies]
bitcoin = { version = "0.32.0", features = ["serde"], default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

[dev-dependencies]
toml = { version = "0.8", default-features = false, features = ["parse"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
toml = { version = "0.8", default-features = false, features = ["parse"] }
serde = { version = "1.0", features = ["derive"] }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
prettyplease = "0.2"

[profile.release]
opt-level = 3
lto = true

[workspace]
